--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="form">
@@ -85,5 +86,6 @@
     </div><!-- tab-content -->
     
 </div> <!-- /form -->
+<script src="script.js"> </script>
 </body>
 </html>
